[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/OverlayControls.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/cursor_pointer.png" type="Texture" id=2]

[node name="OverlayControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScrollTop" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0.196078 )

[node name="ScrollBottom" type="ColorRect" parent="."]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 1, 1, 1, 0.196078 )

[node name="ScrollLeft" type="ColorRect" parent="."]
margin_right = 8.0
margin_bottom = 64.0
color = Color( 1, 1, 1, 0.196078 )

[node name="ScrollRight" type="ColorRect" parent="."]
margin_left = 56.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 1, 1, 1, 0.196078 )

[node name="MenuButton" type="ColorRect" parent="."]
margin_left = 25.0
margin_right = 37.0
margin_bottom = 8.0
color = Color( 0.611765, 0, 0, 0.247059 )

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 37.0
margin_bottom = 38.0

[node name="MouseCursor" type="Control" parent="."]
margin_right = 5.0
margin_bottom = 7.0

[node name="TextureRect" type="TextureRect" parent="MouseCursor"]
margin_left = -9.0
margin_top = -9.0
margin_right = 11.0
margin_bottom = 11.0
texture = ExtResource( 2 )
